--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     min-height: 100vh;
     max-height: 600px;
     height: 100%;
-    width: 250px;
+    width: 20%;
     position:fixed;
     margin:0;
     padding:0;
@@ -152,6 +152,7 @@ body{
     flex-flow: column;
     justify-content: center;
     align-self: center;
+    z-index: 1;
 }
 #hello h1,
 #hello p{
@@ -461,43 +462,6 @@ body{
 }
 /*---------------------------Sesponsive 1/4--------------*/ 
 
-@media (max-width: 600px) {
-    *{
-        margin:0;
-        padding:0;  
-    }
-    body{
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: space-between;
-        font-size: 0.9rem;
-        max-width: 100vw;
-    }
-    #bar{
-        height: 10vh;
-		width:100%;
-    }
-	#bar span{
-		display: block;
-		left:5px;
-		top:5px;
-	}
-    #hello{
-        margin:0;
-        padding:0;
-    }
-    .content{
-        margin:0;
-        padding:0;
-    }
-    #mainContainer{
-        margin:0;
-        padding:0;
-        width: 100%;
-        
-    }
-    
-}
 @media (max-width: 1020px){
     #mainContainer{
         width:100%;
@@ -508,8 +472,8 @@ body{
         text-align: center;
     }
     #hello{
-        margin:0;
         padding: 0;
+        margin-left: 50%;
     }
     #hello h1,
     #hello p{
@@ -534,5 +498,9 @@ body{
     }
     #contact{
         width:100%;
+        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
     }
+    
 }
