--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     min-height: 100vh;
     max-height: 600px;
     height: 100%;
-    width: 20%;
+    width: 250px;
     position:fixed;
     margin:0;
     padding:0;
